Fixes footer contrast

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ object-fit: cover;
 }
 
 .footer-copyright {
-    background-color: #8C7F8D;
+    background-color: #403341;
     color: white;
 }
 
